--- a/TheWheatherApp/TheWheatherApp/Info.plist
+++ b/TheWheatherApp/TheWheatherApp/Info.plist
@@ -66,5 +66,7 @@
 	<string>App would like to access your current location to get your city to populate wheather</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>App would like to access your current location to get your city to populate wheather</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Dark</string>
 </dict>
 </plist>
